--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "alibabacloud/sdk": "^1.8",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
+        "hieu-le/active": "~3.5",
         "intervention/image": "^2.5",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
