--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@ BAIDU_TRANSLATE_KEY=
 SMS_ALIYUN_ACCESS_KEY_ID=
 SMS_ALIYUN_ACCESS_KEY_SECRET=
 SMS_ALIYUN_TEMPLATE_REGISTER=
+
+WEIXIN_KEY=
+WEIXIN_SECRET=
+WEIXIN_REDIRECT_URI=
