--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "predis/predis": "~1.1",
         "socialiteproviders/weixin": "^4.0",
         "spatie/laravel-permission": "~2.29",
+        "spatie/laravel-query-builder": "^2.8",
         "summerblue/administrator": "~1.1",
         "tymon/jwt-auth": "1.0.0-rc.5",
         "viacreative/sudo-su": "~1.1"
@@ -38,6 +39,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
+        "overtrue/laravel-query-logger": "^1.2",
         "phpunit/phpunit": "^7.0",
         "summerblue/generator": "~1.0"
     },
